--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sass": "^1.75.0",
     "sass-loader": "^14.2.0",
     "sortablejs": "^1.15.2",
+    "sysend": "^1.17.4",
     "vue": "^2.6.14",
     "vue-i18n": "^8.26.7",
     "vue-router": "^3.6.5",
