--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sysend": "^1.17.4",
     "vue": "^2.6.14",
     "vue-i18n": "^8.26.7",
+    "vue-print-nb": "^1.7.5",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2",
     "worker-loader": "^3.0.8"
